# oxidize-html

./: Cargo.toml  LICENSE  README.md  html-renderer-spec.md  test-email.html  test2.html
.github/workflows/: html-engine.yml  render.yml
oxidize-demo/: Cargo.toml  README.md  test-3.html
oxidize-html/: Cargo.toml  README.md
oxidize-html-engine/: Cargo.toml  README.md
oxidize-html-engine/.github/: html-engine.yml  main.yml
oxidize-html-engine/src/: layout.rs  lib.rs  styler.rs
oxidize-html-gpui/: Cargo.toml  README.md
oxidize-html-gpui/src/: gpui_renderer.rs  lib.rs
oxidize-html/src/: image.rs  layout.rs  lib.rs  painter.rs  parser.rs
oxidize-render/: Cargo.toml  README.md
oxidize-render/.github/: main.yml
oxidize-render/src/: lib.rs
src/: image.rs  layout.rs  lib.rs  styler.rs  table.rs
