[package]
name = "oxidize-demo"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
oxidize-html = { path = "../oxidize-html", package="oxidize-html" }
oxidize-html-gpui = { path = "../oxidize-html-gpui", features = ["gpui"] }
gpui = { workspace = true }

[feature]
gpui = ["dep:gpui"]


[[bin]]
name = "gpui_demo"
path = "bin/gpui_demo.rs"
